@@ -225,13 +225,20 @@ static void output_distances(struct lstopo_output *loutput)
   if (!err) {
     for(j=0; j<nr; j++) {
       const char *kindmeans = (dist[j]->kind & HWLOC_DISTANCES_KIND_MEANS_LATENCY) ? "latency" : (dist[j]->kind & HWLOC_DISTANCES_KIND_MEANS_BANDWIDTH) ? "bandwidth" : "distance";
-      fprintf(output, "Relative %s matrix (name %s kind %lu) between %u %ss (depth %d) by %s indexes:\n",
-	      kindmeans, hwloc_distances_get_name(topology, dist[j]), dist[j]->kind,
-	      dist[j]->nbobjs,
-	      hwloc_obj_type_string(dist[j]->objs[0]->type),
-	      dist[j]->objs[0]->depth,
-	      index_type != LSTOPO_INDEX_TYPE_PHYSICAL ? "logical" : "physical");
-      hwloc_utils_print_distance_matrix(output, dist[j]->nbobjs, dist[j]->objs, dist[j]->values, index_type != LSTOPO_INDEX_TYPE_PHYSICAL);
+      if (dist[j]->kind & HWLOC_DISTANCES_KIND_HETEROGENEOUS_TYPES) {
+	fprintf(output, "Relative %s matrix (name %s kind %lu) between %u heterogeneous objects by %s indexes:\n",
+		kindmeans, hwloc_distances_get_name(topology, dist[j]), dist[j]->kind,
+		dist[j]->nbobjs,
+		index_type != LSTOPO_INDEX_TYPE_PHYSICAL ? "logical" : "physical");
+      } else {
+	fprintf(output, "Relative %s matrix (name %s kind %lu) between %u %ss (depth %d) by %s indexes:\n",
+		kindmeans, hwloc_distances_get_name(topology, dist[j]), dist[j]->kind,
+		dist[j]->nbobjs,
+		hwloc_obj_type_string(dist[j]->objs[0]->type),
+		dist[j]->objs[0]->depth,
+		index_type != LSTOPO_INDEX_TYPE_PHYSICAL ? "logical" : "physical");
+      }
+      hwloc_utils_print_distance_matrix(output, dist[j]->nbobjs, dist[j]->objs, dist[j]->values, index_type != LSTOPO_INDEX_TYPE_PHYSICAL, dist[j]->kind & HWLOC_DISTANCES_KIND_HETEROGENEOUS_TYPES);
       hwloc_distances_release(topology, dist[j]);
     }
   }
